--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dalton K. Hicks</title>
   <style>
     body {
@@ -12,23 +13,32 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
+      padding: 20px;
       font-size: 20px;
+      text-align: center;
     }
     h1 {
-      margin-bottom: 10px;
+      margin-bottom: 16px;
       font-size: 28px;
       font-weight: normal;
     }
     p {
-      margin: 4px 0;
+      margin: 8px 0;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <h1>Dalton K. Hicks</h1>
-  <p>470-834-2323</p>
-  <p>dalton.hicks@jedunn.com</p>
+  <p><a href="tel:+14708342323">470-834-2323</a></p>
+  <p><a href="mailto:dalton.hicks@jedunn.com">dalton.hicks@jedunn.com</a></p>
 </body>
 </html>
